# src/modules/auth/interfaces/dto/request-password-reset.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail } from 'class-validator';
+
+export class RequestPasswordResetDto {
+  @ApiProperty({ format: 'email' })
+  @IsEmail()
+  email!: string;
+}
